fixed some bugs in RegisterAllocator